--- a/pagina1.html
+++ b/pagina1.html
@@ -27,6 +27,6 @@
   </main>
 
   <div id="footer"></div>
-  <script src="js/modulos.js"></script>
+  <script src="js/modulacion.js"></script>
 </body>
 </html>
