--- a/pagina2.html
+++ b/pagina2.html
@@ -35,6 +35,6 @@
   </main>
 
   <div id="footer"></div>
-  <script src="js/modulos.js"></script>
+  <script src="js/modulacion.js"></script>
 </body>
 </html>
