--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <main>
     <img src="image/logo.png" alt="Logo" width="150">
     <h2>Productos Destacados</h2>
-    <div class="producto"><img src="image/juego1.jpg" width="100"><p>Juego 1</p></div>
-    <div class="producto"><img src="image/juego2.jpg" width="100"><p>Juego 2</p></div>
-    <div class="producto"><img src="image/juego3.jpg" width="100"><p>Juego 3</p></div>
-    <div class="producto"><img src="image/juego4.jpg" width="100"><p>Juego 4</p></div>
-    <div class="producto"><img src="image/juego5.jpg" width="100"><p>Juego 5</p></div>
+    <div class="producto"><img src="images/juego1.jpg" width="100"><p>Juego 1</p></div>
+    <div class="producto"><img src="images/juego2.jpg" width="100"><p>Juego 2</p></div>
+    <div class="producto"><img src="images/juego3.jpg" width="100"><p>Juego 3</p></div>
+    <div class="producto"><img src="images/juego4.jpg" width="100"><p>Juego 4</p></div>
+    <div class="producto"><img src="images/juego5.jpg" width="100"><p>Juego 5</p></div>
     <h3>Juegos más vendidos o destacados</h3>
   </main>
 
