--- a/pagina1.html
+++ b/pagina1.html
@@ -11,17 +11,17 @@
   <main>
 
     <div class="grid-productos">
-      <div class="producto"><img src="image/ps5.jpg" width="100"><p>PlayStation 5</p></div>
-      <div class="producto"><img src="image/xbox.jpg" width="100"><p>Xbox Series X</p></div>
-      <div class="producto"><img src="image/switch.jpg" width="100"><p>Nintendo Switch</p></div>
+      <div class="producto"><img src="images/ps5.jpg" width="100"><p>PlayStation 5</p></div>
+      <div class="producto"><img src="images/xbox.jpg" width="100"><p>Xbox Series X</p></div>
+      <div class="producto"><img src="images/switch.jpg" width="100"><p>Nintendo Switch</p></div>
 
-      <div class="producto"><img src="image/juego1.jpg" width="100"><p>Elden Ring</p></div>
-      <div class="producto"><img src="image/juego2.jpg" width="100"><p>Spider-Man 2</p></div>
-      <div class="producto"><img src="image/juego3.jpg" width="100"><p>Mario Kart 8</p></div>
+      <div class="producto"><img src="images/juego1.jpg" width="100"><p>Elden Ring</p></div>
+      <div class="producto"><img src="images/juego2.jpg" width="100"><p>Spider-Man 2</p></div>
+      <div class="producto"><img src="images/juego3.jpg" width="100"><p>Mario Kart 8</p></div>
 
-      <div class="producto"><img src="image/teclado.jpg" width="100"><p>Teclado RGB</p></div>
-      <div class="producto"><img src="image/mouse.jpg" width="100"><p>Mouse Gamer</p></div>
-      <div class="producto"><img src="image/audifonos.jpg" width="100"><p>Audífonos Inalámbricos</p></div>
+      <div class="producto"><img src="images/teclado.jpg" width="100"><p>Teclado RGB</p></div>
+      <div class="producto"><img src="images/mouse.jpg" width="100"><p>Mouse Gamer</p></div>
+      <div class="producto"><img src="images/audifonos.jpg" width="100"><p>Audífonos Inalámbricos</p></div>
     </div>
 
   </main>
