--- a/pagina2.html
+++ b/pagina2.html
@@ -11,7 +11,7 @@
   <main>
     <section class="producto-detalle">
       <div class="imagen-producto">
-        <img src="image/ps5.jpg" alt="PlayStation 5" width="300">
+        <img src="images/ps5.jpg" alt="PlayStation 5" width="300">
       </div>
       <div class="info-producto">
         <h2>PlayStation 5</h2>
