--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id="header"></div>
 
   <main>
-    <img src="image/logo.png" alt="Logo" width="150">
+    <img src="images/logo.png" alt="Logo" width="150">
     <h2>Productos Destacados</h2>
     <div class="producto"><img src="images/juego1.jpg" width="100"><p>Juego 1</p></div>
     <div class="producto"><img src="images/juego2.jpg" width="100"><p>Juego 2</p></div>
